<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cart_destination"
        android:icon="@drawable/shopping_cart"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cart_text"
        android:enabled="false"
        android:title="@string/cart"
        android:textColor="@color/black"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/wishlist_destination"
        android:icon="@drawable/add_wishlist"
        android:title="@string/wishlist"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home_destination"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

</menu>